# myfw

./: CHANGELOG.md  README.md  pyproject.toml
src/myapp/: __init__.py
src/myapp/cli/: __main__.py  app.py
src/myapp/config/: __hook__.py
src/myapp/loggers/: __init__.py
src/myapp/names/: __init__.py  dynaconf_names.py  names.py  plugins_names.py  typer_names.py
src/myapp/plugins/awesome/: cli.py
src/myapp/plugins/commons/: __init__.py
src/myapp/styles/: __init__.py
src/myapp/utils/: __init__.py
src/myfw/: __init__.py  __pre_init__.py
src/myfw/cli/: app.py
src/myfw/config/: __hook__.py  __init__.py  model.py
src/myfw/core_validators/: __init__.py
src/myfw/loggers/: __hook__.py  __init__.py
src/myfw/names/: names.py  plugins_names.py
src/myfw/plugins/commons/: __init__.py
src/myfw/styles/: __init__.py
src/myfw/utils/: __init__.py
