[project]
name = "myapp"
version = "0.1.5"
requires-python = ">=3.12"
dependencies = [
    "rya>=0.2.24",
]
readme = "README.md"

[tool.uv.build-backend]
module-name = "myapp"
module-root = "src"

[project.scripts]
myapp = "myapp.cli.__main__:app"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
